fixed myname css on mobile

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,3 @@
-
-
 /* Style a black top nav bar for desktop */
 .desktop-navbar {
   display: block;
@@ -41,6 +39,15 @@
   background-color: #333;
   overflow: hidden;
   height: 48px
+}
+/* Style the name link inside the navigation bar on mobile */
+.mobile-navbar a {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 24px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
 /* Style a clickable bit of text in the top left hand corner for desktop and mobile */
